[gd_scene load_steps=19 format=3 uid="uid://be880rni4jo7s"]

[ext_resource type="Texture2D" uid="uid://d1kd7q3k48wwr" path="res://Player/Sprites/Shadow.png" id="1_0ae7n"]
[ext_resource type="Script" uid="uid://whwmrcmthjj6" path="res://Enemies/Scripts/Enemy.gd" id="1_puctb"]
[ext_resource type="Texture2D" uid="uid://lgshoql8fatw" path="res://Enemies/Slime/Slime.png" id="2_wyclx"]
[ext_resource type="Script" uid="uid://ww3f7tce64wm" path="res://Enemies/Scripts/EnemyIdleState.gd" id="4_puctb"]
[ext_resource type="Script" uid="uid://cqniioe2llu4l" path="res://Enemies/Scripts/EnemyWalkState.gd" id="5_dkpye"]
[ext_resource type="Script" uid="uid://bgrkyxajfu668" path="res://Enemies/Scripts/EnemyAttackState.gd" id="6_3of0s"]
[ext_resource type="Script" uid="uid://celvshpbpemhd" path="res://Enemies/Scripts/EnemyChaseState.gd" id="7_suwpu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mjfjn"]
radius = 6.0
height = 28.0

[sub_resource type="Animation" id="Animation_0ae7n"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_wyclx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_mjfjn"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_qsqqn"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_2osmb"]
resource_name = "walk_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -23), Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_puctb"]
resource_name = "walk_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -23), Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_dkpye"]
resource_name = "walk_side"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -23), Vector2(0, -19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3of0s"]
_data = {
&"RESET": SubResource("Animation_wyclx"),
&"idle_down": SubResource("Animation_0ae7n"),
&"idle_side": SubResource("Animation_qsqqn"),
&"idle_up": SubResource("Animation_mjfjn"),
&"walk_down": SubResource("Animation_2osmb"),
&"walk_side": SubResource("Animation_dkpye"),
&"walk_up": SubResource("Animation_puctb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qsqqn"]
radius = 12.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2osmb"]
radius = 7.0
height = 18.0

[node name="Slime" type="CharacterBody2D"]
collision_layer = 1024
collision_mask = 32
script = ExtResource("1_puctb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_mjfjn")

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
modulate = Color(0.9137255, 0.3647059, 0.03529412, 1)
texture = ExtResource("1_0ae7n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("2_wyclx")
hframes = 16
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3of0s")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2(0, -7)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qsqqn")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_2osmb")

[node name="States" type="Node" parent="."]

[node name="EnemyIdleState" type="Node" parent="States"]
script = ExtResource("4_puctb")

[node name="EnemyWalkState" type="Node" parent="States"]
script = ExtResource("5_dkpye")

[node name="EnemyAttackState" type="Node" parent="States"]
script = ExtResource("6_3of0s")

[node name="EnemyChaseState" type="Node" parent="States"]
script = ExtResource("7_suwpu")
